--- a/client/index.html
+++ b/client/index.html
@@ -19,11 +19,13 @@
   <script src="/client/js/renderGame.js"></script>
   
   <script>
+     // establish our communication
+    const socket = io();
     // our canvas
     const g_canvas = document.getElementById("myCanvas");
     const g_ctx = g_canvas.getContext("2d");
    
-   
+
 
   </script>
   </body>
