Lagað sprite stærð

--- a/client/index.html
+++ b/client/index.html
@@ -42,8 +42,9 @@
     g_ctx.beginPath();
     g_ctx.stroke();
   };
-  img.src = './client/img/grassTile.png';
-
+  img.src = './client/img/grassTileHighlighted.png';
+};
+draw();
 
   </script>
   </body>
