--- a/client/index.html
+++ b/client/index.html
@@ -1,46 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Lokaverkefni</title>
-    <link rel="stylesheet" href="./client/styles.css">
-  </head>
-  <body>
-	  <canvas id="myCanvas" width="640" height="640" style="border: 1px solid black;">
-	  Sorry, but your browser does not support the HTML5 canvas tag.
-	  </canvas>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Lokaverkefni</title>
+  <link rel="stylesheet" href="./client/styles.css">
+</head>
+
+<body>
+  <canvas id="myCanvas" width="640" height="640" style="border: 1px solid black;">
+    Sorry, but your browser does not support the HTML5 canvas tag.
+  </canvas>
 
   <!-- ------------------HTML END SCRIPTS START --------------------------------------->
-  
+
   <!-- We need this to communicate using socket.io from client side -->
   <script src="/socket.io/socket.io.js"></script>
   <!-- Load all the client game code and assests from the server-->
-  <script src="/client/img/grassTile.png"></script>
   <script src="/client/js/utils.js"></script>
+  <script src="/client/handleMouse.js"></script>
+  <script src="/client/main.js"></script>
   
-  <script>
-     // establish our communication
-    const socket = io();
-    // our canvas
-    const g_canvas = document.getElementById("myCanvas");
-    const g_ctx = g_canvas.getContext("2d");
-    
-    
-    function draw() {
-  var img = new Image();
-  img.onload = function() {
-    for(let i = 0; i <= 640; i += 64){
-      for(let j = 0; j <= 640; j += 64){
-        g_ctx.drawImage(img, i, j);
-      }
-    }
-    g_ctx.beginPath();
-    g_ctx.stroke();
-  };
-  img.src = './client/img/grassTileHighlighted.png';
-};
-draw();
+</body>
 
-  </script>
-  </body>
 </html>
