--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
   <!-- Load all the client game code and assests from the server-->
   <script src="/client/js/utils.js"></script>
   <script src="/client/handleMouse.js"></script>
-  <script src="/client/main.js"></script>
+  <script src="/client/js/main.js"></script>
   
 </body>
 
