--- a/client/index.html
+++ b/client/index.html
@@ -9,17 +9,21 @@
 
 <body>
   <canvas id="myCanvas" width="640" height="640" style="border: 1px solid black;">
+    <div class="videoContainer">
+      
+    </div>
     Sorry, but your browser does not support the HTML5 canvas tag.
   </canvas>
-
   <!-- ------------------HTML END SCRIPTS START --------------------------------------->
-
+  
+  
   <!-- We need this to communicate using socket.io from client side -->
   <script src="/socket.io/socket.io.js"></script>
   <!-- Load all the client game code and assests from the server-->
   <script src="/client/js/utils.js"></script>
   <script src="/client/handleMouse.js"></script>
   <script src="/client/main.js"></script>
+  <script src="/client/js/firstView.js"></script>
   
 </body>
 
