--- a/client/index.html
+++ b/client/index.html
@@ -39,7 +39,7 @@
          and call the necessary functions needed to draw the map based off 
          the data recived */
       socket.on('NextGameRound', (data)=> {
-        
+        console.log(data);
         // fallidhelgi(data)
          
         // kalla á teikni föllin
