firstview komið næst UI fyrir progress bar

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
         <h2 id ="three"></h2>
       </div>
   </div>
+  <video id="myVideoBackground" src="/client/videos/frontPic.mp4" autoplay=""></video>
 
   <!-- ------------------HTML END SCRIPTS START --------------------------------------->
 
