--- a/client/index.html
+++ b/client/index.html
@@ -32,11 +32,13 @@
     const socket = io();// establish our communication
     let g_readyForNextRound = false;
     let turnCountDown = 5;
+    let g_steps = [];
   </script>
   
   <!-- include all client game logic such as drawing the map waiting looby etc -->
   <script src="./client/js/imagesPreload.js"></script>
   <script src="./client/js/utils.js"></script>
+  <script src="./client/js/playerMovement.js"></script>
   <script src="./client/js/handleMouse.js"></script>
   <script src="./client/js/Sprite.js"></script>
   <script src="./client/js/main.js"></script>
@@ -56,7 +58,7 @@
       drawPlayers();
       socket.on('NextGameRound', (data)=> {
         allPlayerReady(data);
-        drawEmptyMapViaTiles(data, socket.id);
+        drawMapViaTiles(data, socket.id);
         // check if game over ?
       });
 
