--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div class="Headerinn" id="headTitle"></div>
   <div class="gameContainer">
     <div id="grad1">
       <div id="bar">
@@ -51,6 +52,7 @@
   <script src="./client/js/main.js"></script>
   <script src ="/client/js/firstView.js"></script>
   <script src="/client/js/progressBar.js"></script>
+  <script src="/client/js/staminaScores.js"></script>
 
 
  
@@ -72,7 +74,8 @@
 
       socket.on('roundstart', ()=> {
         player = getPlayer();
-        console.log(player+" this is player");
+        console.log(player.character, "nafnid",player.stamina+" this is player");
+        setStamina(player);
         startProgressBar();
         g_readyForNextRound=false;
         setTimeout(() => {
