--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,8 @@
       });
 
       socket.on('roundstart', ()=> {
+        window.addEventListener("mousedown", handleMouse);
+        window.addEventListener("mousemove", handleMouse);
         player = getPlayer();
    
         setStamina(player);
@@ -85,6 +87,8 @@
         setTimeout(() => {
           socket.emit('clientinput',{ steps:g_steps, powerUp:false});
           g_steps = [];
+          window.removeEventListener("mousedown",handleMouse);
+          window.removeEventListener("mousemove",handleMouse);
         }, 5000);
       });
 
