--- a/client/index.html
+++ b/client/index.html
@@ -53,9 +53,10 @@
   <script src="./client/js/handleMouse.js"></script>
   <script src="./client/js/Sprite.js"></script>
   <script src="./client/js/main.js"></script>
-  <script src ="/client/js/firstView.js"></script>
-  <script src="/client/js/progressBar.js"></script>
-  <script src="/client/js/staminaScores.js"></script>
+  <script src ="./client/js/firstView.js"></script>
+  <script src="./client/js/progressBar.js"></script>
+  <script src="./client/js/staminaScores.js"></script>
+  <script src="./client/js/animation.js"></script>
 
 
  
@@ -77,10 +78,11 @@
 
       socket.on('roundstart', ()=> {
         player = getPlayer();
-   
+        
         setStamina(player);
         startProgressBar();
         g_readyForNextRound=false;
+        moveMen(0,5);
         setTimeout(() => {
           socket.emit('clientinput',{ steps:g_steps, powerUp:false});
           g_steps = [];
