--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
         player = getPlayer();
         
         setStamina(player);
+        console.log("server segiru go");
         startProgressBar();
         g_readyForNextRound=false;
         setTimeout(() => {
