--- a/client/index.html
+++ b/client/index.html
@@ -20,8 +20,9 @@
       </div>
     </div>
     <canvas id="myCanvas" width="640" height="640" style="border: 1px solid black;"> Sorry, but your browser does not support the HTML5 canvas tag.</canvas>
-</div>
-        
+  </div>
+  <div class="winnerNote" id="winnerNoteID"> hello worls</div>
+  
    
   <div class="firstViewContainer" id="videoContainerinn">
       <video class="myVideo" src="/client/videos/frontPic.mp4" autoplay="" muted></video>
@@ -78,12 +79,11 @@
       the data recived */
       drawPlayers();
       socket.on('NextGameRound', (data)=> {
-        console.log(data);
         // we check if this is a map and in the proccesses check if the game is over 
         if (data.hasOwnProperty("__gameWon")) {
           // check if the game is over by players
           if(data.__gameWon.players){
-            gameOver("Players");
+            gameOver("survivors");
           }
           // check if the game is over by monaster
           else if(data.__gameWon.monster) {
@@ -132,6 +132,7 @@
         /* Helgi ur functions come here */
         console.log("GAME IS OVER THE ",whowon," has won the game");
         victorySound();
+        document.getElementById("winnerNoteID").innerHTML = "Congrates "+whowon+" you are victorioues !!!";
         setTimeout(() => { socket.emit('resetgamerequest',null); }, 8000);
       }
 
