bæta við gameRules

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,10 @@
         <h2 id ="one"></h2>
         <h2 id ="two"></h2>
         <h2 id ="three"></h2>
+        <div class="gameRules">
+        <p>When the time start players click on tiles to move there character</p>
+        <p>Button X enables your powerup and button R if all agree resets the game</p>
+        <p>The objective is to get all the keys before the monster eats you</p>
       </div>
     </div>
     <video id="myVideoBackground" src="/client/videos/frontPic.mp4" autoplay="" muted></video>
