--- a/client/index.html
+++ b/client/index.html
@@ -68,12 +68,14 @@
     let g_usedPowerUp = false;
     // this turns players movements are stored here and sent to the server
     let g_steps=[];
-    // the player that this client is playing as
+    // all the players in the game
+    let g_player = [];
+    // the players that this client is playing as
     let player;
     // the game state that the user plays (all users get same gamestate)
-    let g_gamestate = [];
+    let g_gamestate;
     // if the game hasent started there is a waiting period that current players wait
-    let g_waiting = [];
+    let g_waiting;
 
   </script>
   
@@ -124,12 +126,13 @@
             // fetch the player 
             // player  to do 
             // set the lobby to empty
-            g_waiting = [];
+            g_waiting = null;
           }
           return;
         }
         // if we did not recive a game state we know we are in waiting lobby
         g_waiting = data;
+        g_gamestate = null;
       });
 
       socket.on('roundstart', ()=> {
