bætt við fleirum spriteum fyrir söru

--- a/client/index.html
+++ b/client/index.html
@@ -84,6 +84,7 @@
   <script src="./client/js/utils.js"></script>
   <script src="./client/js/playerMovement.js"></script>
   <script src="./client/js/handleMouse.js"></script>
+  <script src=".client/js/handleKeyboard.js"></script>
   <script src="./client/js/Sprite.js"></script>
   <script src="./client/js/main.js"></script>
   <script src ="./client/js/firstView.js"></script>
