--- a/client/index.html
+++ b/client/index.html
@@ -80,12 +80,13 @@
   </script>
   
   <!-- include all client game logic such as drawing the map waiting looby etc -->
-  <script src="./client/js/imagesPreload.js"></script>
   <script src="./client/js/utils.js"></script>
+  <script src="./client/js/Sprite.js"></script>
+  <script src="./client/js/imagesPreload.js"></script>
+  <script src="./client/js/main.js"></script>
+  <script src="./client/js/clouds.js"></script>
   <script src="./client/js/playerMovement.js"></script>
   <script src="./client/js/handleMouse.js"></script>
-  <script src="./client/js/Sprite.js"></script>
-  <script src="./client/js/main.js"></script>
   <script src ="./client/js/firstView.js"></script>
   <script src="./client/js/progressBar.js"></script>
   <script src="./client/js/staminaScores.js"></script>
