búinn að gera tilbúið fyrir animation

--- a/client/index.html
+++ b/client/index.html
@@ -138,22 +138,19 @@
       });
 
       socket.on('roundstart', ()=> {
-        console.log("set stamina");
         // when the round starts we allow the user to click on the tiles
         window.addEventListener("mousedown", handleMouse);
         window.addEventListener("mousemove", handleMouse);
         window.addEventListener("keydown", handleKeydown);
 
         player = getPlayer();
-        //setStamina(player);
-        setStamina("bob");
-        console.log("starting progressBaer");
+        setStamina(player);
         startProgressBar();
 
         // start the count down that the user has 5 seconds to make a move
         // declare that the client is not ready for the next round 
         // (NOT THIS ROUND BUT THE NEXT THAT IS YET TO BE CALCULATED AND RENDERED)
-        g_readyForNextRound=false;
+        //Animation breytan, þegar animation er búið g_readyForNextRound=false;
         
         /* Set a lambda function to go off in 5 seconds that will emit to the server what 
            has the user done, clearing the client side on what has he done and removing
@@ -165,7 +162,6 @@
           window.removeEventListener("mousedown",handleMouse);
           window.removeEventListener("mousemove",handleMouse);
           window.removeEventListener("keydown",handleKeydown);
-          //moveMen();
         }, 5000);
 
       });
