--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,9 @@
     let g_gamestate = {};
     // if the game hasent started there is a waiting period that current players wait
     let g_waiting = {};
+    /* to avoid unnecessary computation we store all the clients and the tiles they are in
+       in a seperate obj to be further used more efficiently */
+    let g_tilesContainingPlayers = {};
     
 
   </script>
@@ -127,6 +130,8 @@
             // fetch the player 
             // player  to do 
             // set the lobby to empty
+            g_tilesContainingPlayers = fetchPlayerTiles(g_gamestate.__tiles);
+            console.log(g_tilesContainingPlayers);
             g_waiting = {};
           }
           return;
@@ -135,6 +140,7 @@
         g_waiting = data;
         allPlayerWaiting(g_waiting, false);
         g_gamestate= {};
+        g_tilesContainingPlayers = {};
       });
 
       socket.on('roundstart', ()=> {
