byrjaður að útsýra leikreglur

--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <div class="gameContainer">
-    <div class="sideBar">
-      
+    <div class="sideBar">     
+      <img class="heads" id ="powerUpHeads"/>
       <div class="Headerinn" id="headTitle"></div>
-      <img class="heads" id="playerHeads">
+      <img class="heads" id="playerHeads"/>
       <div id="grad1">
         <div id="bar">
           <div id ="status"></div>
@@ -21,6 +21,7 @@
       </div>
     </div>
     <canvas id="myCanvas" width="640" height="640" style="border: 1px solid black;"> Sorry, but your browser does not support the HTML5 canvas tag.</canvas>
+    <div class="sideNotes">hello Bitches</div>
   </div>
   <video id="myVideoBackground" src="/client/videos/frontPic.mp4" autoplay="" muted></video>
   <div class="winnerNote" id="winnerNoteID"></div>
