--- a/client/index.html
+++ b/client/index.html
@@ -136,6 +136,15 @@
             g_tilesContainingPlayers = fetchPlayerTiles(g_gamestate.__tiles);
             g_tilesContainingPlayers.map(char => {
               let nplayer = playerExistsInTile(char.tile._entities);
+              if(nplayer.character === "bob"){
+                g_animations["bob"].setmovement(nplayer.movement);
+              }
+              if(nplayer.character === "sara"){
+                g_animations["sara"].setmovement(nplayer.movement);
+              }
+              if(nplayer.character === "monster"){
+                g_animations["monster"].setmovement(nplayer.movement);
+              }
               checkPlayer(nplayer,socket.id);
               g_players.push(nplayer);
             });
