gameRules glugginn kominn

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,25 @@
       </div>
     </div>
     <canvas id="myCanvas" width="640" height="640" style="border: 1px solid black;"> Sorry, but your browser does not support the HTML5 canvas tag.</canvas>
-    <div class="sideNotes">hello Bitches</div>
+    <div class="sideNotes">
+      <ul class="unordedListGameRules" id="gameRules">
+        <h2 class="gameRulesHeader">Gamerules</h2>
+        <li>goal of the game is to collect all of the keys before the monster eats you. This is a 3 player online 
+          turnbased game where 2 players are the good guys and 1 player is the monster.
+        </li>
+        <li>
+            The left sidebar shows the progressbar and when it is moving up that is the time to move your 
+            character. Above the progressbar is your players face and above the face is your players stamina.
+        </li>
+        <li>
+            To use the powerups you must catch a diamond and then you will see a diamond icon on the top 
+            left corner and to use it you must press x and your stamina will increase in the next turn.
+        </li>
+        <li>
+            To restart all players must press r
+        </li>
+      </ul>
+    </div>
   </div>
   <video id="myVideoBackground" src="/client/videos/frontPic.mp4" autoplay="" muted></video>
   <div class="winnerNote" id="winnerNoteID"></div>
