--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
     <div class="sideNotes">
       <ul class="unordedListGameRules" id="gameRules">
         <h2 class="gameRulesHeader">Gamerules</h2>
-        <li>goal of the game is to collect all of the keys before the monster eats you. This is a 3 player online 
+        <li>Goal of the game is to collect all of the keys before the monster eats you. This is a 3 player online 
           turnbased game where 2 players are the good guys and 1 player is the monster.
         </li>
         <li>
@@ -36,7 +36,7 @@
             left corner and to use it you must press x and your stamina will increase in the next turn.
         </li>
         <li>
-            To restart all players must press r
+            To restart all players must press r.
         </li>
       </ul>
     </div>
