--- a/client/index.html
+++ b/client/index.html
@@ -109,6 +109,7 @@
   <script src="./client/js/imagesPreload.js"></script>
   <script src="./client/js/g_main.js"></script>
   <script src="./client/js/main.js"></script>
+  <script src="./client/js/FadeOutText.js"></script>
   <script src="./client/js/render.js"></script>
   <script src="./client/js/update.js"></script>
   <script src="./client/js/playerMovement.js"></script>
