--- a/client/index.html
+++ b/client/index.html
@@ -97,6 +97,7 @@
     // client uses this to ping the serve that he is rdy for the next rounds
     let g_readyForNextRound = false;
     
+    let g_animation_finished = false;
     let g_walkinganimfinish = { bob: false, sara: false, monster: false };
     // client sents this to tell the serve that he has used a power up
     let g_usedPowerUp = false;
