fixed sluggis animation walking made it more smooth also fixed that power ups work again and the UI also displays the powers correcly

--- a/client/index.html
+++ b/client/index.html
@@ -160,6 +160,7 @@
           }
           // if the game is not over then its clearly 
           else {
+            console.log(data);
             // set the new game state so our clients can render it
             g_gamestate = data;
             // fetch the player
@@ -205,6 +206,7 @@
            has the user done, clearing the client side on what has he done and removing
            the listeners so he cant select the tiles*/
         setTimeout(() => {
+          console.log("used power up",g_usedPowerUp);
           socket.emit('clientinput',{ steps:g_steps, powerUp:g_usedPowerUp});
           g_steps = [];
           g_usedPowerUp = false;
