--- a/client/index.html
+++ b/client/index.html
@@ -155,10 +155,10 @@
             g_tilesContainingPlayers.map(char => {
               let nplayer = playerExistsInTile(char.tile._entities);
               
-              console.log("player obj",nplayer);
-              console.log(nplayer.playBy,"<- player sock  my sock ->",sockid);
-              console.log(nplayer.playBy === sockid);
-              
+              if(nplayer.playBy === sockid){
+                player =  nplayer;
+              }
+
               if(g_animations[nplayer.character]) {
                 g_animations[nplayer.character].setMovement(nplayer.movement);
               }
